@@ -65,7 +65,8 @@ public:
                           Direction search_direction,
                           bool misspelled_words = false,
                           bool ignore_selection_offset = false,
-                          bool wrap = true) = 0;
+                          bool wrap = true,
+                          bool selected_text = false) = 0;
 
     /**
      * Returns the number of matching occurrences.
@@ -73,7 +74,7 @@ public:
      * @param search_regex The regex to match with.
      * @return The number of matching occurrences.
      */
-    virtual int Count(const QString &search_regex, Searchable::Direction direction, bool wrap = true) = 0;
+    virtual int Count(const QString &search_regex, Searchable::Direction direction, bool wrap = true, bool selected_text = false) = 0;
 
     /**
      * If the currently selected text matches the specified regex,
@@ -92,7 +93,7 @@ public:
      * @param replacement The text with which to replace the matched string.
      * @return The number of performed replacements.
      */
-    virtual int ReplaceAll(const QString &search_regex, const QString &replacement, Searchable::Direction direction, bool wrap = true) = 0;
+    virtual int ReplaceAll(const QString &search_regex, const QString &replacement, Searchable::Direction direction, bool wrap = true, bool selected_text = false) = 0;
 
     /**
      * Returns the currently selected text string.
